name:                cryptopals-hs
version:             0.1.0.0
synopsis:            Matasano crypto challenges solutions in Haskell
description:         Please see README.md
homepage:            http://github.com/mjec/cryptopals-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Cordover
maintainer:          github@mjec.net
copyright:           2016 Michael Cordover
category:            Scripts
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Help
                     , Set1
                     , Set2
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , base16-bytestring
                     , base64-bytestring
                     , containers
                     , text
                     , SimpleAES
                     , cryptonite
                     , QuickCheck
                     , random
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2

executable cryptopals
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , cryptopals-hs
                     , random
                     , bytestring
  default-language:    Haskell2010

test-suite cryptopals-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Set1Data
                     , Set2Data
  build-depends:       base
                     , cryptopals-hs
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
                     , HUnit
                     , bytestring
                     , QuickCheck
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mjec/cryptopals-haskell
